Moved DmsOptions logic to separate .h/.cpp files.

--- a/qtgui/exe/GeoDmsGuiQt.vcxproj
+++ b/qtgui/exe/GeoDmsGuiQt.vcxproj
@@ -126,6 +126,7 @@
       <QtMocFileName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(Filename).moc</QtMocFileName>
     </ClCompile>
     <ClCompile Include="src\DmsMainWindow.cpp" />
+    <ClCompile Include="src\DmsOptions.cpp" />
     <ClCompile Include="src\DmsTreeView.cpp" />
     <ClCompile Include="src\DmsViewArea.cpp" />
     <ClCompile Include="src\main_qt.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="src\DmsDetailPages.h" />
     <QtMoc Include="src\DmsEventLog.h" />
     <QtMoc Include="src\DmsViewArea.h" />
+    <QtMoc Include="src\DmsOptions.h" />
     <ClInclude Include="src\qt_advanced_docking_system\DockComponentsFactory.h" />
     <ClInclude Include="src\qt_advanced_docking_system\DockingStateReader.h" />
     <ClInclude Include="src\qt_advanced_docking_system\IconProvider.h" />
