reimplemented max processing time indication in status_text, issue #270 now with a top-10 list of start-end times in m_processing_records

--- a/shv/dll/ShvDLL.vcxproj
+++ b/shv/dll/ShvDLL.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="src\ThemeValueGetter.cpp" />
     <ClCompile Include="src\ViewControl.cpp" />
     <ClCompile Include="src\ViewPort.cpp" />
+    <ClCompile Include="src\Waiter.cpp" />
     <ClCompile Include="src\WmsLayer.cpp" />
     <ClCompile Include="src\Wrapper.cpp" />
   </ItemGroup>
@@ -202,6 +203,7 @@
     <ClInclude Include="src\ThemeValueGetter.h" />
     <ClInclude Include="src\ViewControl.h" />
     <ClInclude Include="src\ViewPort.h" />
+    <ClInclude Include="src\waiter.h" />
     <ClInclude Include="src\WmsLayer.h" />
     <ClInclude Include="src\Wrapper.h" />
     <ClInclude Include="res\resource.h" />
