--- a/shv/dll/ShvDLL.vcxproj.filters
+++ b/shv/dll/ShvDLL.vcxproj.filters
@@ -210,6 +210,9 @@
     <ClCompile Include="src\ResourceIndexCache.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Waiter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="res\resource.h">
@@ -456,6 +459,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\ResourceIndexCache.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\waiter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
