--- a/shv/dll/ShvDLL.vcxproj
+++ b/shv/dll/ShvDLL.vcxproj
@@ -231,15 +231,14 @@
       <Project>{c0c75a4b-dd01-4272-8fb5-3a242da125ba}</Project>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <CustomBuild Include="..\..\res\fonts\dms.ttf">
-      <FileType>Document</FileType>
-      <Command>COPY %(Identity) $(TargetDir)misc\fonts</Command>
-      <Message>Copying dms.ttf into Target/Misc/Fonts Folder</Message>
-      <Outputs>$(TargetDir)misc\fonts\%(Filename)%(Extension)</Outputs>
-    </CustomBuild>
-  </ItemGroup>
+  
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <Target Name="AfterBuild">
+    <ItemGroup>
+        <dms_ttf_file Include="..\..\res\fonts\dms.ttf"/>
+    </ItemGroup>
+    <Copy SourceFiles="@(dms_ttf_file)" DestinationFolder="$(TargetDir)misc\fonts\" SkipUnchangedFiles="true" />
+  </Target>
 </Project>
