--- a/qtgui/exe/GeoDmsGuiQt.vcxproj.filters
+++ b/qtgui/exe/GeoDmsGuiQt.vcxproj.filters
@@ -13,6 +13,9 @@
     <Filter Include="Qt Advanced Docking System">
       <UniqueIdentifier>{68516755-fb05-41dd-b695-d88a36dcfb5e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Forms">
+      <UniqueIdentifier>{2bd3e7a2-1d43-490f-9613-0a217601b832}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DmsMainWindow.cpp">
@@ -205,6 +208,9 @@
       <Filter>Qt Advanced Docking System</Filter>
     </ClInclude>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="src\forms\DmsLocalMachineOptionsWindow.h">
+      <Filter>Forms</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GeoDmsGuiQt.rc" />
