--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ todo*.txt
 /exe/gui/GeoDmsGuiQt.vcxproj.filters
 /exe/gui/GeoDmsGuiQt.filters
 /qtgui/exe/res/images/down_arrow.xcf
+/XE2/DMS/GeoDmsGuiDelphi.dproj.local
+/XE2/DMS/GeoDmsGuiDelphi.identcache
+/XE2/DMS/GeoDmsGuiDelphi.res
