Test Script fixes

--- a/qtgui/exe/GeoDmsGuiQt.vcxproj.filters
+++ b/qtgui/exe/GeoDmsGuiQt.vcxproj.filters
@@ -236,6 +236,6 @@
     </QtUic>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="debug-settings.txt" />
+    <Text Include="DebugSettings.txt" />
   </ItemGroup>
 </Project>
