--- a/qtgui/exe/GeoDmsGuiQt.vcxproj
+++ b/qtgui/exe/GeoDmsGuiQt.vcxproj
@@ -250,6 +250,6 @@
     <QtUic Include="res\ui\DmsLocalMachineOptionsWindow.ui" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="debug-settings.txt" />
+    <Text Include="DebugSettings.txt" />
   </ItemGroup>
 </Project>
