--- a/workflows/AddNewIssuesToBoard.yml
+++ b/workflows/AddNewIssuesToBoard.yml
@@ -10,7 +10,7 @@ jobs:
     name: Add issue to project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/add-to-project@RELEASE_VERSION
+      - uses: v13/workflows/actions
         with:
           project-url: https://github.com/orgs/ObjectVision/projects/4
-          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}          
+          github-token: ${{ secrets.NEWISSUESTOBOARD }}
