--- a/stg/dll/StgDll.vcxproj
+++ b/stg/dll/StgDll.vcxproj
@@ -38,7 +38,6 @@
   <ImportGroup Condition="'$(Configuration)'=='Release'" Label="PropertySheets">
     <Import Project="..\..\DmsRelease.props" />
   </ImportGroup>
-
   <ItemDefinitionGroup>
     <ClCompile>
       <AdditionalIncludeDirectories>./src;../../sym/dll/src;../../stgimpl/dll/src;../../rtc/dll/src;../../tic/dll/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -46,10 +45,10 @@
     <Link>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
-    <Link Condition="'$(Configuration)'=='Release'" >
+    <Link Condition="'$(Configuration)'=='Release'">
       <DelayLoadDLLs>gdal.dll</DelayLoadDLLs>
     </Link>
-    <Link Condition="'$(Configuration)'=='Debug'" >
+    <Link Condition="'$(Configuration)'=='Debug'">
       <DelayLoadDLLs>gdald.dll</DelayLoadDLLs>
     </Link>
   </ItemDefinitionGroup>
@@ -62,6 +61,7 @@
     <ClCompile Include="src\gdal\gdal_vect.cpp" />
     <ClCompile Include="src\asc\AsciiImp.cpp" />
     <ClCompile Include="src\bmp\BmpImp.cpp" />
+    <ClCompile Include="src\mmd\MemoryMappedDataStorageManager.cpp" />
     <ClCompile Include="src\odbc\OdbcImp.cpp" />
     <ClCompile Include="src\xdb\XdbImp.cpp" />
     <ClCompile Include="src\shp\ShpImp.cpp" />
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClInclude Include="src\asc\AsciiImp.h" />
     <ClInclude Include="src\bmp\BmpImp.h" />
+    <ClInclude Include="src\mmd\MemoryMappeddataStorageManager.h" />
     <ClInclude Include="src\odbc\OdbcImp.h" />
     <ClInclude Include="src\viewportinfo.h" />
     <ClInclude Include="src\xdb\XdbImp.h" />
@@ -89,7 +90,7 @@
     <ClInclude Include="src\dbf\dbfImpl.h" />
     <ClInclude Include="src\FilePtrHandle.h" />
     <ClInclude Include="src\ImplMain.h" />
-	<ClInclude Include="src\cfs\CompoundStorageManager.h" />
+    <ClInclude Include="src\cfs\CompoundStorageManager.h" />
     <ClInclude Include="src\asc\AscStorageManager.h" />
     <ClInclude Include="src\bmp\BmpStorageManager.h" />
     <ClInclude Include="src\gdal\gdal_base.h" />
@@ -122,10 +123,10 @@
   </ImportGroup>
   <Target Name="AfterBuild">
     <ItemGroup>
-      <gdaldata Include="C:\dev\vcpkg\installed\$(Platform)-windows\share\gdal\**\*.*"/>
-      <projdata Include="C:\dev\vcpkg\installed\$(Platform)-windows\share\proj\**\*.*"/>
+      <gdaldata Include="C:\dev\vcpkg\installed\$(Platform)-windows\share\gdal\**\*.*" />
+      <projdata Include="C:\dev\vcpkg\installed\$(Platform)-windows\share\proj\**\*.*" />
     </ItemGroup>
-    <Copy SourceFiles="@(gdaldata)" DestinationFolder="$(TargetDir)gdaldata"/>
-    <Copy SourceFiles="@(projdata)" DestinationFolder="$(TargetDir)proj4data"/>
+    <Copy SourceFiles="@(gdaldata)" DestinationFolder="$(TargetDir)gdaldata" />
+    <Copy SourceFiles="@(projdata)" DestinationFolder="$(TargetDir)proj4data" />
   </Target>
 </Project>
