--- a/tic/dll/DmTic.vcxproj.filters
+++ b/tic/dll/DmTic.vcxproj.filters
@@ -168,6 +168,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FileName.cpp" />
+    <ClCompile Include="src\stg\MemoryMappedDataStorageManager.cpp">
+      <Filter>Storage Handling</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\AbstrCalculator.h">
@@ -405,6 +408,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\FutureTileArray.h" />
+    <ClInclude Include="src\stg\MemoryMappeddataStorageManager.h">
+      <Filter>Storage Handling</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\DataArray.ipp">
