initial gcc compilation setup project

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ todo*.txt
 /XE2/DMS/GeoDmsGuiDelphi.dproj.local
 /XE2/DMS/GeoDmsGuiDelphi.identcache
 /XE2/DMS/GeoDmsGuiDelphi.res
+/msbuild_linux/obj
