rtc release now also compiles with gcc, supplemental.

--- a/rtc/dll/rtc_linux.vcxproj
+++ b/rtc/dll/rtc_linux.vcxproj
@@ -390,6 +390,9 @@
       <PreprocessorDefinitions>DMRTC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CppLanguageStandard>c++2a</CppLanguageStandard>
     </ClCompile>
+    <Link>
+      <IgnoreDefaultLibraries>true</IgnoreDefaultLibraries>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <ClCompile>
@@ -397,6 +400,9 @@
       <PreprocessorDefinitions>DMRTC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CppLanguageStandard>c++2a</CppLanguageStandard>
     </ClCompile>
+    <Link>
+      <IgnoreDefaultLibraries>true</IgnoreDefaultLibraries>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
     <ClCompile>
@@ -404,6 +410,9 @@
       <PreprocessorDefinitions>DMRTC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CppLanguageStandard>c++2a</CppLanguageStandard>
     </ClCompile>
+    <Link>
+      <IgnoreDefaultLibraries>true</IgnoreDefaultLibraries>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">
     <ClCompile>
@@ -411,6 +420,9 @@
       <PreprocessorDefinitions>DMRTC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CppLanguageStandard>c++2a</CppLanguageStandard>
     </ClCompile>
+    <Link>
+      <IgnoreDefaultLibraries>true</IgnoreDefaultLibraries>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -418,6 +430,10 @@
       <PreprocessorDefinitions>DMRTC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CppLanguageStandard>c++2a</CppLanguageStandard>
     </ClCompile>
+    <Link />
+    <Link>
+      <AdditionalOptions>-nostdlib %(AdditionalOptions)</AdditionalOptions>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -425,6 +441,7 @@
       <PreprocessorDefinitions>DMRTC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CppLanguageStandard>c++2a</CppLanguageStandard>
     </ClCompile>
+    <Link />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <ClCompile>
@@ -432,6 +449,9 @@
       <PreprocessorDefinitions>DMRTC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CppLanguageStandard>c++2a</CppLanguageStandard>
     </ClCompile>
+    <Link>
+      <IgnoreDefaultLibraries>true</IgnoreDefaultLibraries>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
     <ClCompile>
@@ -439,6 +459,9 @@
       <PreprocessorDefinitions>DMRTC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CppLanguageStandard>c++2a</CppLanguageStandard>
     </ClCompile>
+    <Link>
+      <IgnoreDefaultLibraries>true</IgnoreDefaultLibraries>
+    </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
