Poly2Grid en BoundingBox van shv -> geo

--- a/geo/dll/GeoDLL.vcxproj
+++ b/geo/dll/GeoDLL.vcxproj
@@ -79,7 +79,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\rtc\dll\src\ipolygon\polygon.hpp" />
+    <ClInclude Include="src\AbstrBoundingBoxCache.h" />
     <ClInclude Include="src\bi_graph.h" />
+    <ClInclude Include="src\BoundingBoxCache.h" />
     <ClInclude Include="src\Dijkstra.h" />
     <ClInclude Include="src\GeoBase.h" />
     <ClInclude Include="src\GeoInterface.h" />
@@ -96,6 +98,7 @@
     <ClInclude Include="src\UseIpp.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\AbstrBoundingBoxCache.cpp" />
     <ClCompile Include="src\BoostGeometry.cpp" />
     <ClCompile Include="src\BoostPolygon.cpp" />
     <ClCompile Include="src\Canyon.cpp" />
@@ -113,6 +116,7 @@
     <ClCompile Include="src\OperPot.cpp" />
     <ClCompile Include="src\Perimeter.cpp" />
     <ClCompile Include="src\Point.cpp" />
+    <ClCompile Include="src\Poly2GridOper.cpp" />
     <ClCompile Include="src\PolyOper.cpp" />
     <ClCompile Include="src\Potential.cpp" />
     <ClCompile Include="src\RasterMerge.cpp" />
