--- a/geo/dll/GeoDLL.vcxproj.filters
+++ b/geo/dll/GeoDLL.vcxproj.filters
@@ -61,6 +61,12 @@
     <ClInclude Include="..\..\rtc\dll\src\ipolygon\polygon.hpp">
       <Filter>Geo Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\AbstrBoundingBoxCache.h">
+      <Filter>Geo Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\BoundingBoxCache.h">
+      <Filter>Geo Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Canyon.cpp">
@@ -136,6 +142,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\PolyOper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\AbstrBoundingBoxCache.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Poly2GridOper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
